<resources>
    <string name="app_name">MyExam</string>
    <string name="start_button">MY PLANNER</string>
    <string name="converter_button">CONVERTER</string>
    <string name="contact_button">CONTACTS</string>
    <string name="image_button">IMAGE DOWNLOADER</string>
    <string name="utils_button">MY UTILS</string>
    <string name="map_button">MAP</string>
    <string name="calc_button">CALCULATOR</string>
    <string name="start2_button">MY ALLIES</string>
    <string name="temp_converter_button">TEMPERATURE CONVERTER</string>
    <string name="time_converter_button">TIME CONVERTER</string>
    <string name="currency_converter_button">CURRENCY CONVERTER</string>
    <string name="temp_converterText">ENTER THE TEMPERATURE</string>
    <string name="cels_to_fahr">FROM CELSIUS TO FAHRENHEIT</string>
    <string name="fahr_to_cels">FROM FAHRENHEIT TO CELSIUS</string>
    <string name="button_enter">ENTER</string>
    <string name="hour_to_min">HOURS TO MINUTES</string>
    <string name="hour_to_sec">HOURS TO SECONDS</string>
    <string name="min_to_sec">MINUTES TO SECONDS</string>
    <string name="min_to_hour">MINUTES TO HOURS</string>
    <string name="sec_to_min">SECONDS TO MINUTES</string>
    <string name="sec_to_hour">SECONDS TO HOURS</string>
    <string name="time_converterText">ENTER THE NUMBER</string>
    <string name="curr_converterText">ENTER THE AMOUNT</string>
    <string name="eur_to_cad">EURO TO CANADIAN DOLLAR</string>
    <string name="eur_to_usd">EURO TO US DOLLAR</string>
    <string name="eur_to_ster">EURO TO STERLING</string>
    <string name="eur_to_itl">EURO TO ITALIAN LIRA</string>
    <string name="eur_to_fcfa">EURO TO CFA FRANC</string>
    <string name="button_browser">BROWSER</string>
    <string name="button_mail">E-MAIL</string>
    <string name="browser_hint">URL</string>
    <string name="email_hint">Mail Address:</string>
    <string name="email_subject_hint">Subject:</string>
    <string name="email_text_hint">Text Here</string>
    <string name="button_send">SEND</string>
    <string name="location_hint">Location</string>
    <string name="mapSearch_button">SEARCH</string>
    <string name="download_button">DOWNLOAD</string>
    <string name="download_hint">Image url:</string>
    <string name="download_title">IMAGE DOWNLOAD</string>
    <string name="button_1_description">button 1</string>
    <string name="calc_hint">Display</string>
    <string name="exe_button">EXECUTE</string>
    <string name="result">Result Here</string>
    <string name="c1_activity_title">Simple Contact List</string>
    <string name="c1_name">Name</string>
    <string name="c1_email">E-mail</string>
    <string name="c1_phone">Phone</string>
    <string name="v1_viewButton">View</string>
    <string name="c1_saveButton">Save</string>
    <string name="c1_clearButton">Clear</string>
    <string name="clear_button">AC</string>
    <string name="delete_button">⌫</string>
    <string name="percent_button">%</string>
    <string name="division_button">/</string>
    <string name="multiplication_button">*</string>
    <string name="substraction_button">-</string>
    <string name="addition_button">+</string>
    <string name="equal_button">=</string>
    <string name="decimal_button">.</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>


</resources>