<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity_calculator">

    <EditText android:id="@+id/calcEdit"
        android:layout_width="360dp"
        android:layout_height="320dp"
        android:hint="@string/calc_hint"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:background="@drawable/border_style" />
    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="360dp"
        android:layout_height="match_parent"

        android:columnCount="4"
        android:rowCount="5">

        <!-- row 0-->

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_button"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/btn_backspace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button"
            android:layout_row="0"
            android:layout_column="1"/>
        <Button
            android:id="@+id/btn_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_button"
            android:layout_row="0"
            android:layout_column="2"/>

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/division_button"
            android:layout_row="0"
            android:layout_column="3"/>

        <!-- row 1-->

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_7"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_8"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_9"
            android:layout_row="1"
            android:layout_column="2"/>

        <Button
            android:id="@+id/btn_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplication_button"
            android:layout_row="1"
            android:layout_column="3"/>

        <!-- row 2-->

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_4"
            android:layout_row="2"
            android:layout_column="0"/>

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_5"
            android:layout_row="2"
            android:layout_column="1"/>

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_6"
            android:layout_row="2"
            android:layout_column="2"/>

        <Button
            android:id="@+id/btn_substraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/substraction_button"
            android:layout_row="2"
            android:layout_column="3"/>

        <!--row 3-->

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_1"
            android:layout_row="3"
            android:layout_column="0"/>

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_2"
            android:layout_row="3"
            android:layout_column="1"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_3"
            android:layout_row="3"
            android:layout_column="2"/>

        <Button
            android:id="@+id/btn_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addition_button"
            android:layout_row="3"
            android:layout_column="3"/>

        <!--row 4-->

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_0"
            android:layout_row="4"
            android:layout_column="0"/>

        <Button
            android:id="@+id/btn_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decimal_button"
            android:layout_row="4"
            android:layout_column="1"/>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnSpan="2"
            android:text="@string/equal_button"
            android:onClick="calculate"/>


    </GridLayout>



</LinearLayout>