<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView android:id="@+id/title_textview"
        android:layout_width="380dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="2dp"
        android:layout_marginTop="40dp"
        android:layout_marginVertical="60dp"
        android:background="@drawable/border_style"
        android:textSize="28sp"
        android:text="@string/c1_activity_title"
        android:textStyle="bold"/>
    <EditText android:id="@+id/c1_name_editText"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/c1_name"
        android:layout_gravity="center"
        android:background="@drawable/border_style"
        android:padding="8dp"
        android:inputType="text"/>
    <EditText android:id="@+id/c1_email_editText"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/c1_email"
        android:layout_gravity="center"
        android:background="@drawable/border_style"
        android:padding="8dp"
        android:inputType="textEmailAddress"/>
    <EditText android:id="@+id/c1_phone_editText"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/c1_phone"
        android:layout_gravity="center"
        android:background="@drawable/border_style"
        android:padding="8dp"
        android:layout_marginBottom="30dp"
        android:inputType="phone" />

    <Button
        android:id="@+id/s1_button"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:text="@string/c1_saveButton" />

    <Button
        android:id="@+id/v1_button"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:text="@string/v1_viewButton" />

    <Button
        android:id="@+id/cl1_button"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:text="@string/c1_clearButton" />


</LinearLayout>