<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity_launcher2">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/redPantonee"
        android:text="@string/calc_button"
        android:onClick="calculator"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/redPantonee"
        android:text="@string/converter_button"
        android:onClick="converter"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/redPantonee"
        android:text="@string/map_button"
        android:onClick="openMap"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/redPantonee"
        android:text="@string/image_button"
        android:onClick="openDownloader"/>

</LinearLayout>